# Redmine-Knowledge-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/scripts/: fail_on_high_severity.py
.github/workflows/: ci.yml  security-audit.yml
docs/: COMMIT_DETAILS_SECURITY.md  SECURITY.md  SPEC.md  THREAT_MODEL.md
src/redmine_knowledge_agent/: __init__.py  __main__.py  client.py  config.py  converter.py  exceptions.py  generator.py  logging.py  models.py  processors.py
tests/: __init__.py  conftest.py  test_additional.py  test_client.py  test_config.py  test_converter.py  test_coverage_fillers.py  test_exceptions.py  test_generator.py  test_logging.py  test_main.py  test_models.py  test_processors.py
